--- a/SCSS/_menu.scss
+++ b/SCSS/_menu.scss
@@ -1,10 +1,10 @@
 .menu-btn {
-  position: "absolute";
+  position: absolute;
   z-index: 1;
   right: 1rem;
   top: 1rem;
   height: 20px;
-  width:28px;
+  width: 28px;
   cursor: pointer;
   @include transition-ease;
 
